# Qzone2TG

./: .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  HTMLParser.py  Jigsaw.py  LICENSE  MANIFEST.in  README.en.md  README.md  README.zh-cn.md  cliff.toml  comp_pic.py  compress.py  config.py  cookie.json  docker-compose.yml  emoji.json  example.json  feed.py  install.sh  package-lock.json  package.json  pyproject.toml  qq_face.json  qzone.py  setup.cfg  setup.py  tg.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-pr.yml  build.yml  ci.yml  codeql-analysis.yml  dependabot.yml  docker.yml  python-app.yml  sphinx.yml  test.yml  wheel.yml
config/: log.yml  test.yml  test_conf.yml
doc/: config.md  requirements.txt
doc/source/: agreement.rst  build.rst  conf.py  index.rst  quickstart.rst  reference.rst  usage.rst
doc/source/config/: bot.rst  index.rst  log.rst  quickstart.rst  qzone.rst
docker/: .dockerignore  Dockerfile  Dockerfile.alpine  Dockerfile.slim  docker-compose.yml
misc/: config.md  emoji.yaml  example.json  example.yaml  qq_face.yaml
script/: remove_feedstime.py
src/: VERSION  __init__.py  __main__.py  __version__.py  main.py  pack.py  uihook.py  utils.py  zipapp.sh
src/frontend/tg/: __init__.py  base.py  compress.py  tg_uihook.py  ui.py  utils.py
src/middleware/: __init__.py  storage.py  uihook.py
src/qzone/: __init__.py  common.py  cookie.py  exceptions.py  feed.py  heartbeat.py  jsjson.py  qzone.py  scraper.py
src/qzone/parser/: __init__.py  emojimgr.py  utils.py
src/qzone/parser/html/: imgitem.py  txtbox.py
src/qzone2tg/: VERSION  __init__.py  __main__.py  conf.py  settings.py
src/qzone2tg/app/: base.py  hook.py  interact.py  storage.py
src/qzone2tg/bot/: __init__.py  hook.py  limitbot.py  queue.py
src/qzone2tg/frontend/tg/: __init__.py  base.py  compress.py  ui.py  utils.py
src/qzone2tg/middleware/: __init__.py  hook.py  storage.py  utils.py
src/qzone2tg/qzone/: common.py  exceptions.py  feed.py  heartbeat.py  scraper.py
src/qzone2tg/qzone/api/: __init__.py  album.py
src/qzone2tg/qzone/parser/: __init__.py
src/qzone2tg/qzone/parser/html/: imgitem.py  txtbox.py
src/qzone2tg/qzone/scraper/: __init__.py  album.py
src/qzone2tg/utils/: decorator.py  iter.py
src/qzone3tg/: __init__.py  __main__.py  _hookspec.py  _messages.py  settings.py  type.py
src/qzone3tg/app/: __init__.py  base.py  hook.py  interact.py
src/qzone3tg/app/base/: __init__.py  _hook.py
src/qzone3tg/app/interact/: __init__.py  _block.py  _button.py  _comment.py  _hook.py  _like.py  types.py
src/qzone3tg/app/interact/_conversation/: comment.py  emoji.py
src/qzone3tg/app/storage/: __init__.py  blockset.py  loginman.py  orm.py
src/qzone3tg/bot/: __init__.py  atom.py  limitbot.py  queue.py  splitter.py
src/qzone3tg/utils/: __init__.py  iter.py
src/qzonebackend/: __init__.py  common.py  feed.py  qzfeedparser.py  qzone.py  regjson.py
src/qzonebackend/qzfeedparser/: __init__.py  emojimgr.py
src/qzonebackend/validator/: jigsaw.py  walker.py
src/tgfrontend/: compress.py  hook.py  tg.py  tg_uihook.py
src/utils/: decorator.py  encrypt.py  iterutils.py
test/: __init__.py  botTest.py  compressTest.py  conftest.py  demjsonTest.py  floodTest.py  jigsawTest.py  parserTest.py  qzoneTest.py  simulateTest.py  storageTest.py  test_compress.py  test_conf.py  test_decorator.py  test_demjson.py  test_flood.py  test_login.py  test_queue.py  test_qzone.py  test_simulate.py  test_storage.py
test/bot/: __init__.py  test_atom.py  test_queue.py  test_splitter.py  test_tasker.py
