[tool.poetry]
name = "Qzone3TG"
version = "0.7.5.dev23"
description = "Forward Qzone feeds to telegram."
authors = ["aioqzone <zzzzss990315@gmail.com>"]
readme = "README.md"
license = "AGPL-3.0"
homepage = "https://github.com/aioqzone/Qzone2TG"
repository = "https://github.com/aioqzone/Qzone2TG"
documentation = "https://aioqzone.github.io/Qzone2TG"

[tool.poetry.dependencies]
python = "~3.11.0"
aioqzone = { version = ">=0.12.11.dev2", extras = ["captcha", "lxml"] }
aioqzone-feed = { version = "^0.13.4.dev4", source = "aioqzone-index" }
qzemoji = { version = "^5.1.1", source = "aioqzone-index" }
python-telegram-bot = { extras = [
    "rate-limiter",
    "webhooks",
    "job-queue",
], version = "^20.0" }
socksio = { version = "^1.0.0", source = "aioqzone-index" }


# dependency groups
[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "~0.21.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "^23.1.0"
isort = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.0.1"
autodoc-pydantic = "^1.7.0"
sphinx-autodoc-typehints = "^1.18.2"
sphinx-rtd-theme = "*"
sphinx-tabs = "^3.4.0"

[[tool.poetry.source]]
name = "aioqzone-index"
url = "https://aioqzone.github.io/aioqzone-index/simple/"
default = false
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# customize begin
[tool.pytest.ini_options]
pythonpath = 'src'
log_cli = 1
log_cli_level = 'WARNING'


[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
target-version = ['py311']

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
