[tool.poetry]
name = "Qzone3TG"
version = "0.9.3.dev4"
description = "Forward Qzone feeds to telegram."
authors = ["aioqzone <zzzzss990315@gmail.com>"]
readme = "README.md"
license = "AGPL-3.0"
homepage = "https://github.com/aioqzone/Qzone2TG"
repository = "https://github.com/aioqzone/Qzone2TG"
documentation = "https://aioqzone.github.io/Qzone2TG"

[tool.poetry.dependencies]
python = "~3.11"
aioqzone-feed = "^1.0.3.dev1"
aioqzone = [
    { version = "*", allow-prereleases = true },
    { version = "*", allow-prereleases = true, extras = [
        "captcha",
    ], optional = true },
]
qzemoji = { version = "^6.0.2", source = "aioqzone-index" }
aiogram = { version = "^3.1.1", extras = ["proxy"] }
apscheduler = "^3.10.4"

[tool.poetry.extras]
captcha = ["aioqzone"]

# dependency groups
[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "~0.21.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "^23.1.0"
isort = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.0.1"
autodoc-pydantic = "*"
sphinx-autodoc-typehints = "^1.18.2"
furo = "*"
sphinx-tabs = "^3.4.0"

[[tool.poetry.source]]
name = "aioqzone-index"
url = "https://aioqzone.github.io/aioqzone-index/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# customize begin
[tool.pytest.ini_options]
pythonpath = 'src'
log_cli = 1
log_cli_level = 'WARNING'

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
target-version = ['py311']

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
