[tool.poetry]
name = "Qzone3TG"
version = "0.9.8.dev1"
description = "Forward Qzone feeds to telegram."
authors = ["aioqzone <zzzzss990315@gmail.com>"]
readme = "README.md"
license = "AGPL-3.0"
homepage = "https://github.com/aioqzone/Qzone2TG"
repository = "https://github.com/aioqzone/Qzone2TG"
documentation = "https://aioqzone.github.io/Qzone2TG"

[tool.poetry.dependencies]
python = "~3.11"
aioqzone-feed = "^1.2.1.dev2"
slide-tc = { version = "~0.1.1", allow-prereleases = true, optional = true }
qzemoji = { version = "^6.0.4", source = "aioqzone-index" }
aiogram = { version = "^3.3.0", extras = ["proxy"] }                         # bot api 7.0
apscheduler = "^3.10.4"

[tool.poetry.extras]
captcha = ["slide-tc"]

# dependency groups
[tool.poetry.group.test]
optional = false

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "~0.21.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"
isort = "!=5.13.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.0.1"
autodoc-pydantic = "*"
sphinx-autodoc-typehints = "^1.18.2"
furo = "*"
sphinx-tabs = "^3.4.0"

[[tool.poetry.source]]
name = "aioqzone-index"
url = "https://aioqzone.github.io/aioqzone-index/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# customize begin
[tool.pytest.ini_options]
pythonpath = 'src'
log_cli = 1
log_cli_level = 'WARNING'

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
target-version = ['py311']

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
