[metadata]
name = Qzone2TG
version = file: src/qzone2tg/VERSION
description = Forward Qzone feeds to telegram
author = JamzumSum
author_email = zzzzss990315@gmail.com
url = https://github.com/JamzumSum/Qzone2TG
license = AGPL-3.0
license_files = LICENSE

[options]
python_requires = >=3.9
install_requires=
    python-telegram-bot==13.8.1
    lxml==4.6.4
    cssselect==1.1.0
    omegaconf==2.1.1
    keyring==23.2.1
    tzlocal==4.1
    QQQR @ git+https://github.com/JamzumSum/QQQR.git@2.4.2a1
    QzEmoji @ git+https://github.com/JamzumSum/QzEmoji.git@1.0.2a0

tests_require = pytest
package_dir =
     = src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
socks = python-telegram-bot[socks]
