[metadata]
name = Qzone3TG
version = attr: qzone3tg.VERSION
description = Forward Qzone feeds to telegram
author = JamzumSum
author_email = zzzzss990315@gmail.com
url = https://github.com/JamzumSum/Qzone3TG
license = AGPL-3.0
license_files = LICENSE

[options]
python_requires = >=3.9
install_requires =
    aioqzone @ git+https://github.com/JamzumSum/aioqzone.git
    python-telegram-bot[socks]~=13

tests_require =
    PyYAML
    pytest
    pytest-asyncio

packages = find:
package_dir=
    =src
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
doc =
    sphinx
    autodoc_pydantic
    sphinx_rtd_theme
